# adk-agent-demo

./: .gitignore  README.md  __init__.py  docker-compose.yml  main.py  orchestrator.py  pyproject.toml  sessions.py
image_agent/: __init__.py  agent.py  agent_instruction.md  image_tool.py
reports_agent/: .env  __init__.py  agent.py  agent_instruction.md  tools.py
reports_agent/search/: __init__.py  data_embedding.py  data_extractor.py  db.py  index_loader.py  index_repository.py
root_agent/: .env  __init__.py  agent.py  agent_instruction.md
search/: data_extractor.py  db.py  index_loader.py  index_repository.py
time_agent/: .env  agent.py  tools.py
weather_agent/: agent.py  tools.py
