[project]
name = "adk-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.5.1",
    "google-adk>=1.25.1",
    "litellm>=1.81.16",
    "pypdf>=6.7.4",
    "python-dotenv>=1.0.0",
    "requests>=2.32.5",
    "tqdm>=4.67.3",
]
