[project]
name = "adk-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.12.0",
    "chromadb>=1.5.1",
    "diffusers>=0.36.0",
    "google-adk>=1.25.1",
    "huggingface-hub>=1.4.1",
    "litellm>=1.81.16",
    "pillow>=12.1.1",
    "pypdf>=6.7.4",
    "python-dotenv>=1.0.0",
    "requests>=2.32.5",
    "safetensors>=0.7.0",
    "torch>=2.10.0",
    "torchaudio>=2.10.0",
    "torchvision>=0.25.0",
    "tqdm>=4.67.3",
    "transformers>=5.2.0",
]
